--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ license = "MIT OR Apache-2.0"
 
 [features]
 default = ["vulkan"]
-gl = []
 vulkan = []
 
 [profile.release]
@@ -46,3 +45,14 @@ log = { version = "0.4.7", features = ["serde"] }
 glsl-to-spirv = "0.1"
 phf = { version = "0.7.24", features = ["macros"] }
 num-traits = "*"
+
+gl = "0.6"
+sdl2 = "0.32"
+sdl2-sys = "0.32"
+pathfinder_geometry = { git = "https://github.com/servo/pathfinder/" }
+pathfinder_content = { git = "https://github.com/servo/pathfinder/" }
+pathfinder_canvas = { git = "https://github.com/servo/pathfinder/" }
+pathfinder_renderer = { git = "https://github.com/servo/pathfinder/" }
+pathfinder_gl = { git = "https://github.com/servo/pathfinder/" }
+pathfinder_gpu = { git = "https://github.com/servo/pathfinder/" }
+pathfinder_export = { git = "https://github.com/servo/pathfinder/" }
